tests/models/snapshots/before_save_sets_jti_on_insert@refresh_tokens-2.snap
---
source: tests/models/refresh_tokens.rs
expression: saved_token
---
Ok(
    Model {
        id: ID
        user_id: 1,
        jti: PID,
        browser: Some(
            "Brave",
        ),
        user_ip: Some(
            "10.10.10.1",
        ),
        revoked: false,
        created_at: DATE,
        updated_at: DATE,
        expired_at: DATE,
    },
)
