tests/models/snapshots/can_find_by_claims_key@users-2.snap
---
source: tests/models/users.rs
expression: user
---
Ok(
    Model {
        id: 1,
        pid: 11111111-1111-1111-1111-111111111111,
        login: "user1",
        email: "user1@example.com",
        password: "$argon2id$v=19$m=19456,t=2,p=1$ETQBx4rTgNAZhSaeYZKOZg$eYTdH26CRT6nUJtacLDEboP0li6xUwUF/q5nSlQ8uuc",
        name: "user1",
        is_active: true,
        created_at: 2023-11-12T12:34:56.789+00:00,
        updated_at: 2023-11-12T12:34:56.789+00:00,
    },
)
