tests/models/snapshots/can_find_by_jti@refresh_tokens.snap
---
source: tests/models/refresh_tokens.rs
expression: res
---
Ok(
    Model {
        id: 1,
        user_id: 1,
        jti: 11111111-1111-1111-1111-111111111111,
        browser: Some(
            "Chrome 12.0",
        ),
        user_ip: Some(
            "127.0.0.1",
        ),
        revoked: false,
        created_at: 2023-11-12T12:34:56.789+00:00,
        updated_at: 2023-11-12T12:34:56.789+00:00,
        expired_at: 2023-11-12T12:34:56.789+00:00,
    },
)
