tests/models/snapshots/can_find_by_login@users-2.snap
---
source: tests/models/users.rs
assertion_line: 78
expression: non_existing_user_results
---
Err(
    EntityNotFound,
)
