tests/models/snapshots/can_revoke_token@refresh_tokens.snap
---
source: tests/models/refresh_tokens.rs
expression: res
---
Ok(
    Model {
        id: 1,
        user_id: 1,
        jti: 11111111-1111-1111-1111-111111111111,
        browser: Some(
            "Chrome 12.0",
        ),
        user_ip: Some(
            "127.0.0.1",
        ),
        revoked: true,
        created_at: DATE,
        updated_at: DATE,
        expired_at: DATE,
    },
)
