tests/models/snapshots/can_save_refresh_token@refresh_tokens.snap
---
source: tests/models/refresh_tokens.rs
expression: res
---
Ok(
    Model {
        id: ID
        user_id: 1,
        jti: PID,
        browser: Some(
            "Chrome 12.0",
        ),
        user_ip: Some(
            "127.0.0.1",
        ),
        revoked: false,
        created_at: DATE,
        updated_at: DATE,
        expired_at: DATE,
    },
)
