tests/models/snapshots/generate_refresh_token_cookie@refresh_tokens.snap
---
source: tests/models/refresh_tokens.rs
expression: token
---
Ok(
    TokenData {
        header: Header {
            typ: Some(
                "JWT",
            ),
            alg: HS512,
            cty: None,
            jku: None,
            jwk: None,
            kid: None,
            x5u: None,
            x5c: None,
            x5t: None,
            x5t_s256: None,
        },
        claims: UserClaims {
            pid: "11111111-1111-1111-1111-111111111111",
            exp: EXPIRED_AT,
            claims: {
                "jti": String("11111111-1111-1111-1111-111111111111"),
            },
        },
    },
)
